--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 			    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
 			  </configuration>
 			</plugin>
+			<!--  Deploy no jboss -->
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>1.1.0.Beta1</version>
+			</plugin>			
 		</plugins>
 	</build>
 </project>
